--- a/css/details.css
+++ b/css/details.css
@@ -1,4 +1,3 @@
-/* Color Of The Year -- https://colorganize.com/?palette=75 */
 body {
     background-color: #000;
     color: rgba(255, 255, 255, 0.7);
@@ -28,43 +27,7 @@ body {
     animation: bgAni 18s infinite;
   }
   
-  @keyframes blurAni {
-    0% {
-      filter: blur(20px);
-    }
-    25% {
-      filter: blur(5px);
-    }
-    50% {
-      filter: blur(15px);
-    }
-    75% {
-      filter: blur(0);
-    }
-    100% {
-      filter: blur(20px);
-    }
-  }
-  @keyframes bgAni {
-    0% {
-      background-color: rgba(0, 0, 0, 0.6);
-    }
-    17% {
-      background-color: rgba(0, 0, 0, 0.7);
-    }
-    33% {
-      background-color: rgba(0, 0, 0, 0.9);
-    }
-    50% {
-      background-color: rgba(0, 0, 0, 0.5);
-    }
-    67% {
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-    100% {
-      background-color: rgba(0, 0, 0, 0.6);
-    }
-  }
+ 
   main {
     position: absolute;
     top: 2rem;
@@ -78,7 +41,7 @@ body {
   #albumCover {
     width: 100%;
     height: 20rem;
-    background-image: url(https://pm1.narvii.com/6550/b065d35aa41fdb109683539db339cffe5a788aa0_hq.jpg);
+    background-image: url(https://i1.sndcdn.com/artworks-000361895088-bn4s38-t500x500.jpg);
     background-size: cover;
     display: inline-block;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.5);
@@ -90,41 +53,27 @@ body {
   }
   
   #progress-bar {
-    width: 0%;
-    height: .4rem;
+    width: 30%;
+    height: 4pt;
     background-color: #F7CAC9;
   }
   #progress-bar.play {
     animation: progress-bar 240s infinite;
   }
   
-  @keyframes progress-bar {
-    from {
-      width: 0%;
-    }
-    to {
-      width: 100%;
-    }
-  }
+  
+  
   #title {
     margin: 1rem 0;
     width: 100%;
     overflow: hidden;
-    height: 1.1rem;
+    height: 3rem;
   }
   
   #title-text {
-    animation: scrolling-text 16s linear infinite;
+    font-size: 30px;
   }
   
-  @keyframes scrolling-text {
-    from {
-      transform: translateX(100%);
-    }
-    to {
-      transform: translateX(-100%);
-    }
-  }
   #controls {
     display: flex;
     align-items: center;
@@ -135,11 +84,11 @@ body {
     width: 2.7rem;
     height: 2.7rem;
     border-radius: 50%;
-    border: 1px solid;
+    border: 2px solid;
     cursor: pointer;
     display: inline-block;
-    margin: 1px;
-    transition: transform .3s, box-shadow .5s, text-shadow .5s;
+    margin: 2px;
+   
   }
   .control:hover, .control:focus {
     color: #fff;
@@ -165,11 +114,15 @@ body {
     font-size: 4rem;
   }
   #controls-play .icon-pause {
-    display: none;
+    display:none;
   }
   #controls-play.play .icon-pause {
     display: block;
   }
   #controls-play.play .icon-play {
     display: none;
+  }
+
+  #term{
+    font-size: 20px;
   }
