--- a/css/search.css
+++ b/css/search.css
@@ -9,3 +9,34 @@ body{
   top:20%;
   left:50%;
 }
+#search{
+  color:palevioletred;
+  font-size:40px;
+}
+#list{
+  background-color:none;
+  border: none;
+  color:palevioletred;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  margin: 2px 2px;
+  cursor: pointer;
+
+}
+
+#icon{
+  background-color:none;
+  border: none;
+  color:palevioletred;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  margin: 2px 2px;
+  cursor: pointer;
+
+}
